[package]
name = "kbart-harvester"
version = "0.1.0"
edition = "2021"
authors = ["Mathis EON <eon@abes.fr>"]

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
futures = "0.3.27"
reqwest = "0.11.14"
tokio = {version = "1.26.0", features=["full"]}
tokio-stream = {version = "*", features=["io-util"]}
thiserror = "1.0.39"
clap = { version = "4.1.8", features = ["derive"] }
sanitize-filename = "0.4.0"
env_logger = "0.10.0"
log = "0.4.17"
